--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
         <h1>My Task Manager</h1>
         <span class="Adder">
             <input type="text" placeholder="Enter a task" id="task_input">
-            <input type="date" id="dateInput">
-            <button id="Task_add_button">Add Task</button>
-            
+            <span>    
+                <input type="date" id="dateInput">
+                <button id="Task_add_button">Add Task</button>
+            </span>
         </span>
         <h2>Tasks</h2>
         <ul id="task_list_ul">
